default dark to avoid flickering

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,13 +19,18 @@ canvas {
   background-color: rgba(184, 223, 248, 0.1);
 }
 
+body {
+  background-color: #313030 !important;
+  color: #999;
+}
+
 body.light-mode {
-  background-color: #fff;
+  background-color: #fff !important;
   color: #333;
   transition: background-color 0.3s ease;
 }
 body.dark-mode {
-  background-color: #313030;
+  background-color: #313030 !important;
   color: #999;
 }
 
